--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,17 +11,22 @@
         <h1>Sastrería y Arreglo de Ropa</h1>
         <nav>
             <ul>
-                <li><a href="#servicios">Servicios</a></li>
+                <li><a href="#Nosotros">Nosotros</a></li>
                 <li><a href="#beneficios">Beneficios</a></li>
                 <li><a href="#galeria">Galería</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#contacto">Contactanos</a></li>
             </ul>
         </nav>
     </header>
+   
     <div class="container">
-        <section class="card" id="servicios">
-          <h2>Descripción del Servicio</h2>
-          <p>En nuestra sastrería ofrecemos servicios de confección a medida, arreglos de ropa y personalización de prendas. Nos especializamos en brindar un ajuste perfecto y un acabado profesional.</p>
+        <section class="card" id="Nosotros">
+          <h2>Conocemos el Negocio</h2>
+          <p>Somos una agencia de arreglos de ropa profesionales que está innovando este negocio.
+            Con los años de experiencia hemos descubierto las frustraciones que tienen que
+             experimentar los clientes cuando recurren a este servicio encontrándose con sorpresas
+              que hemos eliminado por completo con nuestro servicio a domicilio para entrega
+               inmediata; un servicio que hará más fácil la vida de nuestros clientes.</p>
         </section>
 
         <section class="card" id="beneficios">
@@ -41,7 +46,7 @@
         </section>
 
         <section class="card" id="contacto">
-          <h2>Contacto</h2>
+          <h2>Contactanos</h2>
           <p>Síguenos en nuestras redes sociales:</p>
            <ul>
               <li><a href="https://facebook.com">Facebook</a></li>
