--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,8 +41,10 @@
 
         <section class="card" id="galeria">
           <h2>Galería</h2>
-          <img src="/images/ejemplo1.jpg" alt="Ejemplo de sastrería">
-          <img src="/images/ejemplo2.jpg" alt="Arreglo de ropa">
+          <img src="https://http2.mlstatic.com/D_NQ_NP_822100-MLC69329590709_052023-O.webp" alt="imagen 1">
+          <img src="/images/ejemplo2.jpg" alt="imagen 2">
+          <img src="/images/ejemplo3.jpg" alt="imagen 3">
+          <img src="/images/ejemplo4.jpg" alt="imagen 4">
         </section>
 
         <section class="card" id="contacto">
