--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,18 +60,23 @@
         </section>
 
         <section class="card" id="formulario">
-            <h2>Contactanos</h2>
-            <form action="/contacto" method="POST">
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre" required>
-        
-                <label for="email">Correo Electrónico:</label>
-                <input type="email" id="email" name="email" required>
-        
-                <label for="comentario">Comentario:</label>
-                <textarea id="comentario" name="comentario" required></textarea>
-        
-                <button type="submit">Enviar</button>
+            <h2>Danos tu opinion</h2>
+            <form action="/send" method="post">
+                <div class="form-group">
+                    <label for="email">Correo Electrónico</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="nombre">Nombre</label>
+                    <input type="text" id="nombre" name="nombre" required>
+                </div>
+                <div class="form-group">
+                    <label for="comentario">Comentario</label>
+                    <textarea id="comentario" name="comentario" required></textarea>
+                </div>
+                <div class="form-group">
+                    <button type="submit">Enviar</button>
+                </div>
             </form>
   
           </section>
